--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation "com.apollographql.apollo:apollo-android-support:0.5.0"
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
+    implementation 'org.jetbrains:annotations-java5:15.0'
 }
 
 apollo {
